# zedis

./: Cargo.toml
.claude/skills/: GPUI_SKILLS_REFERENCE.md
crates/zedis-ui/: Cargo.toml  README.md
crates/zedis-ui/src/: about.rs  form.rs  lib.rs
src/: constants.rs  helpers.rs
src/components/: kv_delegate.rs
src/connection/: config.rs
src/views/: about.rs  hash_editor.rs  key_tree.rs  kv_table.rs  list_editor.rs  servers.rs  set_editor.rs  sidebar.rs  status_bar.rs  stream_editor.rs  zset_editor.rs
